# tiger

./: Cargo.toml  README.md  WORKSPACE  build.rs  validate_grammar.sh
src/: absyn.rs  canon.rs  canon_linear.ml  escape.rs  frame.rs  int_types.rs  ir.rs  lib.rs  main.rs  oldtiger.l  oldtiger.y  parsing.rs  scrap.md  semant.rs  symbol.rs  symtab.rs  tc.rs  temp.rs  tiger.l  tiger.y  translate.rs  util.rs
src/appel_ml_source/: main.ml  runtime.c
src/asm/: runtime.c
src/assem/: mod.rs  x86.rs  x86_64.rs
src/frame/: mod.rs  x86_64.rs
tc/: BUILD  Cargo.toml  README.md
tc/src/: canon.rs  escape.rs  int_types.rs  ir.rs  runtime.c  scrap.md  semant.rs  tc.rs  temp.rs  translate.rs  util.rs
tc/src/appel_ml_source/: README.md  canon.ml
tc/src/assem/: mod.rs  x86_64.rs
tc/src/frame/: mod.rs  x86_64.rs
tc/tests/: compile_tiger.sh  run_e2e_test.sh
tc/tests/tiger_programs/end_to_end/: and.tig  arrays.tig  binops.tig  built_in_fns.tig  div.tig  fib.tig  fn_composition_records.tig  fn_composition_simple.tig  for_break.tig  for_loop.tig  if_else.tig  merge.tig  nested_fn_1.tig  nested_fn_2.tig  nested_fn_3.tig  or.tig  overflow.tig  queens.tig  record_arg.tig  record_field_from_fn_ret_val.tig  record_ret_val.tig  records.tig  seven_args_int.tig  seven_args_records.tig  simple_recurse.tig  strings.tig  while_break.tig
tests/: parsing.rs
tests/tiger_programs/end_to_end/: binops.tig  built_in_fns.tig  for_break.tig  if_else.tig  if_no_else.tig  while_break.tig
tests/tiger_programs/parsing/bad/: fn_return_nil.tig
tests/tiger_programs/parsing/good/: uminus.tig
(+11 files in other folders)
